css actualizado servicios

--- a/servicios.html
+++ b/servicios.html
@@ -26,7 +26,7 @@
         <section class="cta">
             <h2>¿Te gustaría desarrollar un proyecto específico para tu negocio?</h2>
             <p>¡Desarrolla un sistema diseñado específicamente para resolver tus problemas o necesidades con Grupo TecnoFutura!</p>
-            <a href="solicitar_servicios.html" class="btn-cta">¡Encargar ahora!</a>
+            <a href="solicitar_servicio.html" class="btn-cta">¡Encargar ahora!</a>
         </section>
 
         <!-- Sección: Proyectos desarrollados -->
@@ -89,7 +89,7 @@
     </main>
 
     <!-- Pie de página -->
-    <footer class="pie-pagina">
+    <footer class="pie-de-pagina">
         <p>&copy; 2025 Grupo TecnoFutura.</p>
         <p>Contáctanos a través de nuestra página oficial de Facebook.</p>
     </footer>
