--- a/solicitar_servicio.html
+++ b/solicitar_servicio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solicitar un servicio</title>
+    <title>Servicios - Grupo TecnoFutura</title>
     <link rel="stylesheet" href="CSS/solicitar_servicio.css">
 </head>
 
@@ -15,83 +15,131 @@
             <a href="index.html" class="boton-regresar">REGRESAR</a>
         </nav>
     </header>
-
+<main>
     <!-- Hero -->
     <section class="hero">
-        <div class="texto-hero">
+        <div class="contenido-hero">
             <h1>Elige el paquete que mejor se adapte a tus necesidades.</h1>
         </div>
         <div class="imagen-hero">
-            <img src="img/hero-image.png" alt="Vista de base de datos">
+            <img src="img/hero-image.png" alt="Tabla de base de datos">
         </div>
     </section>
 
-    <!-- Plan de programa funcional -->
+    <!-- Plan funcional -->
     <section class="plan-funcional">
-        <h2>Plan de programa funcional</h2>
-        <p>Este plan incluye un sistema diseñado para solucionar tus problemas o necesidades, junto con una base de datos que almacenará toda tu información de manera segura. Las bases de datos sólo las administramos a nivel de seguridad, ¡por lo que nosotros no tenemos acceso a los datos resguardados!</p>
-        <div class="caracteristicas">
-            <div class="caracteristica">
-                <img src="img/sistema-web.png" alt="Sistema web">
-                <p>Sistema o página web completamente funcional y escalable.</p>
-            </div>
-            <div class="caracteristica">
-                <img src="img/base-datos.png" alt="Base de datos">
-                <p>Base de datos segura y confiable.</p>
-            </div>
-            <div class="caracteristica">
-                <img src="img/actualizaciones.png" alt="Actualizaciones">
-                <p>Actualizaciones de seguridad y funcionalidades.</p>
-            </div>
-            <div class="caracteristica">
-                <img src="img/soporte.png" alt="Soporte">
-                <p>Soporte 24/7 para cualquier duda o problema.</p>
+        <div class="imagen-plan-funcional">
+            <img src="img/plan-funcional.png" alt="Interfaz del plan funcional">
+        </div>
+        <div class="contenido-plan-funcional">
+            <h2>Plan de programa funcional</h2>
+            <p>
+                Este plan incluye un sistema diseñado para solucionar tus problemas o necesidades, junto con una base de datos que almacenará toda tu información de manera segura. Las bases de datos solo las administramos a nivel de seguridad, por lo que nosotros no tenemos acceso a los datos resguardados. ¡Solo el administrador/dueño del sistema tiene acceso completo!            </p>
+            <div class="caracteristicas">
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-sitio.png" alt="Ícono de sitio web">
+                    </div>
+                     <strong>Sistema o página web</strong>
+                    <p>Una aplicación/sitio web completamente funcional y escalable.</p>
+                </div>
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-bd.png" alt="Ícono de base de datos">
+                    </div>
+                    <strong>Base de datos</strong>
+                    <p>Una SQL totalmente segura y confiable que almacenará todo lo necesario para tus necesidades.</p>
+                </div>
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-actualizaciones.png" alt="Ícono de actualizaciones">
+                    </div>
+                    <strong>Actualizaciones</strong>
+                    <p>Actualizaciones de seguridad o de nuevas funcionalidades para tu aplicación/sitio web.</p>
+                </div>
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-soporte.png" alt="Ícono de soporte">
+                    </div>
+                    <strong>Soporte 24/7</strong>
+                    <p>Soporte 24/7 para ayudarte en cualquier duda o problema que surja.</p>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Plan de sistema integral -->
+    <!-- Plan integral -->
     <section class="plan-integral">
-        <h2>Plan de sistema integral</h2>
-        <p>Este plan incluye todo lo necesario para el funcionamiento de un sistema completo: diseño de un sistema que soluciona tus problemas o necesidades, hasta una base de datos para almacenar toda tu información de manera segura. Además, te incluimos el dominio de tu sitio web y un servicio de hosting para mantener tu página en línea.</p>
-        <div class="caracteristicas">
-            <div class="caracteristica">
-                <img src="img/sistema-web.png" alt="Sistema web">
-                <p>Sistema o página web completamente funcional y escalable.</p>
-            </div>
-            <div class="caracteristica">
-                <img src="img/base-datos.png" alt="Base de datos">
-                <p>Base de datos segura y confiable.</p>
-            </div>
-            <div class="caracteristica">
-                <img src="img/actualizaciones.png" alt="Actualizaciones">
-                <p>Actualizaciones de seguridad y funcionalidades.</p>
-            </div>
-            <div class="caracteristica">
-                <img src="img/soporte.png" alt="Soporte">
-                <p>Soporte 24/7 para cualquier duda o problema.</p>
-            </div>
-            <div class="caracteristica">
-                <img src="img/hosting.png" alt="Hosting">
-                <p>Administración de hosting.</p>
-            </div>
-            <div class="caracteristica">
-                <img src="img/dominio.png" alt="Dominio">
-                <p>Dominio personalizado conforme a tu giro o necesidad.</p>
-            </div>
-            <div class="caracteristica">
-                <img src="img/ssl.png" alt="Certificado SSL">
-                <p>Certificado SSL para proteger la información transmitida por tu página.</p>
-            </div>
-            <div class="caracteristica">
-                <img src="img/correo.png" alt="Correo empresarial">
-                <p>Correo empresarial configurado.</p>
+        <div class="contenido-plan-integral">
+            <h2>Plan de sistema integral</h2>
+            <p>
+                Este plan incluye todo lo necesario para el funcionamiento de un sistema completo: desde un sistema que soluciona tus problemas o necesidades, hasta una base de datos para almacenar toda tu información de manera segura. Además, te incluimos el dominio de tu sitio web y un servicio de hosting para mantener tu página en línea. Las bases de datos solo las administramos a nivel de seguridad, por lo que nosotros no tenemos acceso a los datos resguardados. ¡Solo el administrador/dueño del sistema tiene acceso completo!            </p>
+            <div class="caracteristicas">
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-sitio.png" alt="Ícono de sitio web">
+                    </div>
+                    <strong>Sistema o página web</strong>
+                    <p>Una aplicación/sitio web completamente funcional y escalable.</p>
+                </div>
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-bd.png" alt="Ícono de base de datos">
+                    </div>
+                    <strong>Base de datos</strong>
+                    <p>Una SQL totalmente segura y confiable que almacenará todo lo necesario para tus necesidades.</p>
+                </div>
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-actualizaciones.png" alt="Ícono de actualizaciones">
+                    </div>
+                    <strong>Actualizaciones</strong>
+                    <p>Actualizaciones de seguridad o de nuevas funcionalidades para tu aplicación/sitio web.</p>
+                </div>
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-soporte.png" alt="Ícono de soporte">
+                    </div>
+                    <strong>Soporte 24/7</strong>
+                    <p>Soporte 24/7 para ayudarte en cualquier duda o problema que surja.</p>
+                </div>
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-hosting.png" alt="Ícono de hosting">
+                    </div>
+                    <strong>Hosting</strong>
+                    <p>Administramos el hosting para almacenar tu página y mantenerla en línea de manera eficiente.</p>
+                </div>
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-dominio.png" alt="Ícono de dominio">
+                    </div>
+                    <strong>Dominio</strong>
+                    <p>Te otorgamos un dominio conforme a tu giro o necesidad; el nombre del dominio es conforme a disponibilidad.</p>
+                </div>
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-ssl.png" alt="Ícono de SSL">
+                    </div>
+                    <strong>Certificado SSL</strong>
+                    <p>Te otorgamos un certificado SSL en tu página web. Su propósito principal es proteger la información que se transmite por internet, garantizando que los datos no sean interceptados ni manipulados por terceros.</p>
+                </div>
+                <div>
+                    <div class="icono">
+                        <img src="img/icono-email.png" alt="Ícono de correo">
+                    </div>
+                    <strong>Correo empresarial</strong>
+                    <p>Te ayudamos a configurar un correo electrónico empresarial.</p>
+                </div>
             </div>
         </div>
+        <div class="imagen-plan-integral">
+            <img src="img/plan-integral.png" alt="Ejemplo de e-commerce">
+        </div>
     </section>
-
+</main>
     <!-- Pie de página -->
-    <footer class="pie-pagina">
+    <footer class="pie-de-pagina">
         <p>&copy; 2025 Grupo TecnoFutura.</p>
         <p>Contáctanos a través de nuestra página oficial de Facebook.</p>
     </footer>
