pagina de demostracion

--- a/servicios.html
+++ b/servicios.html
@@ -37,7 +37,7 @@
                 <div class="proyecto">
                     <img src="IMG/proyecto1.png" alt="Proyecto 1">
                     <p><strong>TecnoFutura</strong></p>
-                    <a href="">Ver más detalles sobre este proyecto</a>
+                    <a href="pagina_demostracion.html">Ver más detalles sobre este proyecto</a>
                 </div>
                 <div class="proyecto">
                     <img src="IMG/proyecto2.png" alt="Proyecto 2">
